tests/errors/cpp/expand/merge-at-start.h
#define EXPANDME1(x) ##x
EXPANDME1(0)
